# stapel-notifications

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MODULE.md  Makefile  README.md  SECURITY.md  __init__.py  _capabilities.py  _codegen.py  _codegen_settings.py  actions.py  admin.py  apps.py  codegen_urls.py  conf.py  conftest.py  dto.py  errors.py  gdpr.py  models.py  pyproject.toml  routing.py  serializers.py  services.py  translation_keys.py  translations.py  urls.py  views.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  publish.yml
channels/: email.py  push.py  sms.py
docs/: capabilities.json  capabilities.meta.json  errors.en.md  errors.ru.md  schema.json
management/commands/: check_notifications.py  consume_contacts.py  consume_notifications.py  consume_profiles.py  consume_translations.py  eject_notification_templates.py  sync_translations.py
migrations/: 0001_initial.py  0002_add_auto_detected_language.py  0003_add_sms_preferences.py  0004_usercontact_is_active.py
schemas/consumes/: translations.changed.json  user.deletion_initiated.json
templates/email/: _footer_unsubscribe.html  all_sessions_revoked.html  auth_change.html  listing_blocked.html  listing_expiring.html  magic_link_login.html  new_device_login.html  new_message.html  otp_code.html  report_reviewed.html  suspicious_login.html  workspace_invitation.html
templates/notifications/email/: _base.html  _footer_unsubscribe.html  _raw_content.html  auth_change.html  gdpr_export_ready.html  gdpr_inactivity_closed.html  listing_blocked.html  listing_expiring.html  magic_link_login.html  new_device_login.html  new_message.html  otp_code.html  report_reviewed.html  suspicious_login.html  workspace_invitation.html  workspace_invitation_new_user.html  workspace_mfa_restored.html  workspace_mfa_suspension.html  workspace_provisioned_account.html
tests/: test_api_endpoints.py  test_branding_and_content.py  test_channels.py  test_consumers.py  test_contract.py  test_error_i18n.py  test_error_keys.py  test_extensibility.py  test_features.py  test_gdpr_and_misc.py  test_i18n_loop.py  test_library_commands.py  test_models.py  test_org_program_notifications.py  test_public_api.py  test_serializer_seams.py  test_services_pipeline.py  test_translations_sync.py
translations/: .state.json  errors.ru.json
