[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-notifications"
version = "0.3.1"
description = "Push and in-app notifications Django app for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "notifications", "push", "firebase"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "stapel-core>=0.3.0,<0.4",
]

[project.optional-dependencies]
firebase = ["firebase-admin>=6.4"]
kafka = ["confluent-kafka>=2.3"]
all = ["stapel-notifications[firebase,kafka]"]

[tool.setuptools]
package-dir = {"stapel_notifications" = "."}
packages = ["stapel_notifications", "stapel_notifications.channels", "stapel_notifications.management", "stapel_notifications.management.commands", "stapel_notifications.migrations", "stapel_notifications.tests"]

[tool.setuptools.package-data]
stapel_notifications = ["py.typed", "migrations/*.py", "schemas/**/*.json", "templates/**/*", "static/**/*", "migrations/**/*.py"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q"

[tool.coverage.run]
# Measure the shipped library code only: the packaged test suite, its
# conftest and the migration files are distributed for reuse but are not
# runtime code exercised by the host project.
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/migrations/*",
]
