[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-notifications"
version = "0.3.6"
description = "Push and in-app notifications Django app for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "notifications", "push", "firebase"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "stapel-core>=0.8,<0.9",
]

[project.urls]
Homepage = "https://github.com/usestapel/stapel-notifications"
Repository = "https://github.com/usestapel/stapel-notifications"
Documentation = "https://github.com/usestapel/stapel-notifications#readme"
Changelog = "https://github.com/usestapel/stapel-notifications/blob/main/CHANGELOG.md"
Issues = "https://github.com/usestapel/stapel-notifications/issues"

[project.optional-dependencies]
firebase = ["firebase-admin>=6.4"]
kafka = ["confluent-kafka>=2.3"]
all = ["stapel-notifications[firebase,kafka]"]

[tool.setuptools]
package-dir = {"stapel_notifications" = "."}
packages = ["stapel_notifications", "stapel_notifications.channels", "stapel_notifications.management", "stapel_notifications.management.commands", "stapel_notifications.migrations"]

[tool.setuptools.package-data]
stapel_notifications = ["py.typed", "migrations/*.py", "schemas/**/*.json", "templates/**/*", "static/**/*", "migrations/**/*.py"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Single source for the git hooks and CI (they pass the same flags on the CLI).
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q"

[tool.coverage.run]
# Measure the shipped library code only: the packaged test suite, its
# conftest and the migration files are distributed for reuse but are not
# runtime code exercised by the host project.
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/migrations/*",
]
